force-app/main/default/objects/Order__x/Order__x.object-meta.xml
<CustomObject>
    <externalDataSource>Amazon_DynamoDB</externalDataSource>
    <externalName>Order</externalName>
    <label>Order</label>
</CustomObject>