force-app/main/default/objects/Order__x/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>