force-app/main/default/objects/Order__x/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <externalDeveloperName>Address</externalDeveloperName>
    <label>Address</label>
    <length>255</length>
    <referenceTo>Address__x</referenceTo>
    <relationshipLabel>Order</relationshipLabel>
    <relationshipName>Order</relationshipName>
    <type>ExternalLookup</type>
</CustomField>