force-app/main/default/objects/Order__x/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>